--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.81.0",
     "debug": "~2.6.0",
     "serve-favicon": "~2.4.5",
+    "statuses": "^1.4.0",
     "tape": "^4.7.0"
   },
   "author": "Kathryn Hodge",
