--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "~2.6.0",
     "serve-favicon": "~2.4.5",
     "statuses": "^1.4.0",
+    "array-flatten": "^2.1.1",
     "tape": "^4.7.0"
   },
   "author": "Kathryn Hodge",
