--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.12.4",
+    "http-errors": "^1.6.2",
     "express-session": "^1.15.6",
     "mongo-morgan": "^2.0.1",
     "mongoose": "^4.11.13",
