--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.12.4",
     "http-errors": "^1.6.2",
     "express-session": "^1.15.6",
+    "encodeurl": "^1.0.2",
     "mongo-morgan": "^2.0.1",
     "mongoose": "^4.11.13",
     "morgan": "^1.7.0",
