--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tutorial",
   "version": "1.0.0",
   "description": "",
+ "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "start": "node server.js"
   },
