--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
  "engines": {
     "node": "6.11.1"
   },
+  
+ "main": "server.js",
   "scripts": {
     "start": "node server.js"
+
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
