--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "tutorial",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "6.11.1"
+  },
+  
+ "main": "server.js",
   "scripts": {
     "start": "node server.js"
+
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
